2003-10-07  Bernie Solomon  <bernard@ugsolutions.com>

	* mono/scripts/Makefile.am mono/scripts/*.in: fix
	managed .exe paths so they are found under cygwin.

2003-10-07  Zoltan Varga  <vargaz@freemail.hu>

	* mono/tests/pinvoke2.cs mono/tests/libtest.c: Fix array of structs
	test.

2003-10-06  Bernie Solomon  <bernard@ugsolutions.com>

	* mono/tests/pinvoke2.cs mono/tests/pinvoke11.cs 
	mono/tests/libtest.c: Add more pass by value struct
	tests for platforms with more complex calling conventions 
	(Sparc V9, HPPA 64 bit).

2003-10-06  Zoltan Varga  <vargaz@freemail.hu>

	* mono/tests/pinvoke2.cs mono/tests/libtest.c: Add array of structs
	marshalling test.

2003-10-04  Bernie Solomon  <bernard@ugsolutions.com>

	* mono/tests/libtest.c: remove warnings except
	"no previous prototype"

2003-10-03  Bernie Solomon  <bernard@ugsolutions.com>

	* mono/tests/libtest.c: (test_lpwstr_marshal) remove undefined
	behaviour of increment, (mono_test_marshal_char) = should be ==

2003-09-30  Zoltan Varga  <vargaz@freemail.hu>

	* mono/tests/remoting1.cs: Added test for interface casts on
	TransparentProxies.

2003-09-24  Bernie Solomon  <bernard@ugsolutions.com>

        * mono/tests/pinvoke*.cs, delegate4.cs, marshal10.cs, marshal4.cs
          marshal5.cs: remove .so from DllImport of libtest to aid portability.

2003-09-08  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Added check for valgrind headers.

2003-09-03  Zoltan Varga  <vargaz@freemail.hu>

	* Makefile.am: Use $(MAKE) in even more places. Patch by Bernie Solomon
	(bernard@ugsolutions.com).
	
2003-08-27  Zoltan Varga  <vargaz@freemail.hu>

	* Makefile.am: Use $(MAKE) instead of make. Patch by Bernie Solomon
	(bernard@ugsolutions.com).

2003-08-25  Zoltan Varga  <vargaz@freemail.hu>

	* mono.pc.in: Added gthread-2.0.

2003-08-22  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Added gthread-2.0 to GLIB_CFLAGS and GLIB_LIBS, so we
	can call g_thread_init ().

2003-08-21  Zoltan Varga  <vargaz@freemail.hu>
